feat: css update, xylosuite intro update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
                 <h1 class="white-shadow col-12 px-0 font-weight-lighter">
                     {{ site.slogan1 }}
                 </h1>
-                <h2 class="white-shadow col-12 px-0">
+                <h2 class="col-12">
                     {{ site.slogan2 }}
                 </h2>
             </div>
