--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,8 @@
     title="{{ site.title }}"
     href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}"
   />
+  <link rel="icon" href="{{ '/favicon.png' | relative_url }}" type="image/png">
+
 
   <meta name="google-site-verification" content="SWW7wEcTUAFFtlTvULhQONyCKsJY7cmyRF5j2zOqoTI" />
   <script type="application/ld+json">
